	plugins {
		id 'java'
		id 'org.springframework.boot' version '3.4.3'
		id 'io.spring.dependency-management' version '1.1.7'
	}

	group = 'com.agrocredito'
	version = '0.0.1-SNAPSHOT'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(17)
		}
	}

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	repositories {
		mavenCentral()
	}

	dependencies {
		implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
		implementation "org.springframework.boot:spring-boot-starter-oauth2-authorization-server"
		implementation 'org.springframework.boot:spring-boot-starter-security'
		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
		compileOnly 'org.projectlombok:lombok'
		developmentOnly 'org.springframework.boot:spring-boot-devtools'
		runtimeOnly 'com.mysql:mysql-connector-j'
		implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
		implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

		annotationProcessor 'org.projectlombok:lombok'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'org.springframework.security:spring-security-test'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
